--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel --open"
+    "start": "parcel --open",
+    "build": "parcel build"
   },
   "devDependencies": {
     "parcel": "^2.7.0"
